@@ -20,7 +20,7 @@ int
 main (void)
 {
 #pragma omp parallel num_threads (64)
-  {
-    foo ();
-  }
+  foo ();
+
+  return 0;
 }
