@@ -1,3 +1,8 @@
+2005-09-28  Richard Henderson  <rth@redhat.com>
+
+	* testsuite/libgomp.dg/omp-loop03.c: Fix return code.
+	* testsuite/libgomp.dg/omp-single-3.c: New test.
+
 2005-09-28  Diego Novillo  <dnovillo@redhat.com>
 
 	* testsuite/libgomp.dg/omp-single-2.c: New test.
